# earnings-call-nlp-alpha

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
notebooks/: 01_data_exploration.ipynb  02_transcript_parsing.ipynb  03_sentiment_analysis.ipynb  04_event_study.ipynb  05_backtest_analysis.ipynb
scripts/: run_backtest.py  run_pipeline.py
src/earnings_nlp/backtest/: event_returns.py  event_study.py  metrics.py  portfolio.py
src/earnings_nlp/data/: build_universe.py  download_prices.py  download_transcripts.py
src/earnings_nlp/features/: change_features.py  finbert_features.py  groups.py  linguistic_features.py
src/earnings_nlp/models/: baseline.py  predictive_model.py
src/earnings_nlp/processing/: chunk_text.py  classify_speakers.py  clean_transcripts.py
src/earnings_nlp/utils/: paths.py
tests/: test_event_returns.py  test_event_study.py  test_features.py  test_transcript_parser.py
